# koyu-workspace

./: .gitignore  AGENTS.md  KNOWN-ISSUES.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  env.ts  router.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/components/tour/: IntroTour.tsx
frontend/src/components/ui/: Breadcrumbs.tsx  Button.tsx  Modal.tsx
frontend/src/features/auth/: localAuth.ts
frontend/src/features/controls/: api.ts
frontend/src/features/controls/pages/: ControlsPage.tsx
frontend/src/features/datasets/: DatasetCard.tsx  DatasetDetailPage.tsx  DatasetFormModal.tsx  DatasetViewer.tsx  TimeSeriesPlot.tsx  api.ts  parquet.ts  types.ts
frontend/src/features/datasets/pages/: DatasetsPage.tsx
frontend/src/features/projects/: api.ts  editorEmbeds.ts  embedApi.ts  fileTree.ts  readmeSync.ts  runReadmeSync.ts  runTree.ts  types.ts  usePanelState.ts
frontend/src/features/projects/components/: FilesPanel.tsx  ManifestEmbedCard.tsx  ManifestLinkPickerModal.tsx  ManifestViewerModal.tsx  MarkdownReadmeEditor.tsx  ProjectCard.tsx  ProjectFormModal.tsx  ReadmeEditorToolbar.tsx  RunsPanel.tsx  VideoEmbedBlock.tsx
frontend/src/features/projects/extensions/: ManifestEmbed.ts  VideoEmbed.ts
frontend/src/features/sync/: api.ts  types.ts
frontend/src/features/sync/pages/: SyncJobsPage.tsx
frontend/src/lib/: api.ts  useBridge.ts
local_tool/: __init__.py  __main__.py  catalog.py  ids.py  io.py  models.py  paths.py
local_tool/cli/: __init__.py  common.py  ingest.py  sync_cmd.py
local_tool/server/: __init__.py  app.py  deps.py
local_tool/server/routes/: episodes.py  ingest.py  manifests.py  projects.py  runs.py  sync.py
local_tool/store/: __init__.py  episodes.py  ingest.py  manifests.py  projects.py  recording.py  run_manifests.py  runs.py
local_tool/sync/: __init__.py  cloud_portal.py  exec.py  ignore.py  models.py  plan.py  progress.py
tests/: test_ingest.py
(+3 files in other folders)
