[project]
name = "local_tool"
version = "0.1.0"
description = "Koyu workspace — local filesystem store, HTTP adapter, cloud sync, and runtime-outbox ingestion"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "blake3>=1.0",
    "httpx>=0.27",
]

# Plug `koyu ingest` into the koyu-cli umbrella command when both are installed.
[project.entry-points."koyu.plugins"]
ingest = "local_tool.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["local_tool*"]
