[project]
name = "local_tool"
version = "0.1.0"
description = "Koyu workspace — local filesystem store, HTTP adapter, cloud sync, and runtime-outbox ingestion"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "blake3>=1.0",
    "httpx>=0.27",
]

# Plug the workspace verbs into the koyu-cli umbrella command. sync-push and
# sync-pull carry the prefix because plain push/pull are koyu-cli core verbs
# (raw file transfer); these are identity-bearing store<->cloud sync.
[project.entry-points."koyu.plugins"]
ingest = "local_tool.cli:main"
clone = "local_tool.cli:main"
sync-push = "local_tool.cli:main"
sync-pull = "local_tool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["local_tool*"]
